Fixed Java 1.4 compliancy
git-svn-id: https://ha-jdbc.svn.sourceforge.net/svnroot/ha-jdbc/trunk@408 882a69a1-a10d-0410-8702-ae3607fe02de